--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,14 +53,6 @@
       animation: marquee 30s linear infinite;
     }
 
-    .curved-text-container {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transform: rotate(-3deg);
-    }
-
     ::-webkit-scrollbar {
       width: 12px;
     }
@@ -79,12 +70,15 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client"
   }
 }
 </script>
 </head>
 <body>
   <div id="root"></div>
+
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
